--- a/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
@@ -153,15 +153,14 @@
       </p-tabPanel>
       <p-tabPanel header="Revision details">
         <app-revision-details
-          [claim]="claim"
+          [selectedSpringTickets]="selectedSpringTickets"
         ></app-revision-details>
       </p-tabPanel>
       <p-tabPanel header="Documents and reports">
         <label class="text-primary mb-2">Reports</label>
-        <app-ticket-reports [policyDetails]="policyDetails"></app-ticket-reports>
+        <app-ticket-reports></app-ticket-reports>
 
-        <app-ticket-documents [currentTicket]="currentTicket">
-        </app-ticket-documents>
+        <app-ticket-documents></app-ticket-documents>
 
       </p-tabPanel>
     </ng-container>
