--- a/src/app/features/base/components/dashboard/tickets-summary/tickets-summary.component.html
+++ b/src/app/features/base/components/dashboard/tickets-summary/tickets-summary.component.html
@@ -62,8 +62,7 @@
 
   </div>
   <div class="card-footer border-top-0" style="background-color: #ffffff">
-    <div class="text-end" style="padding-bottom: 1rem;">
-      <a class="text-end-view" (click)="goToViewTickets()" >{{'base.view_all' | translate | uppercase }}</a>
-    </div>
+<!--    <a class="float-start text-start-dispatch" (click)="goToDispatch()" >{{'base.dispatch' | translate | uppercase }}</a>-->
+    <a class="float-end text-end-view" (click)="goToViewTickets()" >{{'base.view_all' | translate | uppercase }}</a>
   </div>
 </div>
