--- a/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
+++ b/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
@@ -39,9 +39,10 @@
 
 
 <div  class="d-flex my-4 mx-4">
-  <button class="btn btn-success" (click)="generateAuthorizeOtp()" style="margin-right: 1rem;">Authorize</button>
+<!--  <button class="btn btn-success" (click)="generateAuthorizeOtp()" style="margin-right: 1rem;">Authorize</button>-->
   <button class="btn btn-primary border-radius-none" (click)="processReassignTask()" id="btn-reassign-task" style="margin-right: 1rem;">Reassign</button>
-  <button class="btn btn-success" (click)="authorizePolicy()">Authorize Policy</button>
+  <button class="btn btn-success" (click)="authorizePolicy()" style="margin-right: 1rem;">Authorize</button>
+  <button class="btn btn-outline-primary" (click)="goToDispatch()">Dispatch</button>
 </div>
 
 <div class="d-flex my-4 mx-4">
