--- a/src/assets/css/turnkey-styles.css
+++ b/src/assets/css/turnkey-styles.css
@@ -553,8 +553,8 @@ color: #00529B;
 .text-end-view {
   border-radius: 2px;
   border: 1px solid var(--primary-color);
-  background-color: #ffffff;
-  color: var(--primary-color);
+  background-color: var(--primary-color);
+  color: #ffffff;
   padding: 0.6rem 1.3rem;
   font-size: 12px;
 }
@@ -562,10 +562,29 @@ color: #00529B;
 
 .text-end-view:hover {
   border: 1px solid var(--primary-color);
+  background-color: #ffffff;
+  color: var(--primary-color);
+  padding: 0.6rem 1.3rem;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.text-start-dispatch {
+  border-radius: 2px;
+  border: 1px solid var(--primary-color);
+  background-color: #ffffff;
+  color: var(--primary-color);
+  padding: 0.6rem 1.3rem;
+  font-size: 12px;
+}
+
+.text-start-dispatch:hover {
+  border: 1px solid var(--primary-color);
   background-color: var(--primary-color);
   color: white;
   padding: 0.6rem 1.3rem;
   font-size: 12px;
+  cursor: pointer;
 }
 
 .form-check > input {
